# ObjDet_ROS

./: CMakeLists.txt  README.md  README_ES.md  package.xml
launch/: yolo.launch
msg/: BoundingBox2D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3DArray.msg  Mask.msg  Pose2D.msg
rviz/: labrob.rviz
scripts/: debug_node.py  detect3d_node.py  static_kinect.py  transform_publish.py  yolov8_node.py
