<?xml version="1.0"?>
<package format="2">
  <name>yolov8</name>
  <version>0.0.0</version>
  <description>The yolov8 package</description>

  <maintainer email="wata@todo.todo">wata</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
</package>
